--- a/index.html
+++ b/index.html
@@ -27,7 +27,28 @@
                 </a>
             </div>
         </div>
-        <div class="sign-up"></div>
+        <div class="sign-up">
+            <form class="sign-up-block">
+                <h2>Sign Up</h2>
+                <h3>Get started absolutely free</h3>
+
+                <div class="input">
+                    <span>Email</span> <br>
+                    <input type="text">
+                </div>
+                <div class="input">
+                    <span>Password</span> <br>
+                    <input type="password">
+                </div>
+
+                <div class="checkbox">
+                    <input type="checkbox" id="confirm">
+                    <label for="confirm">Creating an account means you’re okay with our Terms of Service, Privacy <br>
+                        Policy, and default Notification Settings</label>
+                </div>
+                <input type="submit" value="Sign up">
+            </form>
+        </div>
     </div>
 </body>
 
